--- a/Galleries/Tiny Objects/styles.css
+++ b/Galleries/Tiny Objects/styles.css
@@ -12,3 +12,16 @@ nav ul li {
     color: rgb(74, 231, 74);
     list-style: none;
 }
+.hide-bullets {
+    list-style:none;
+    margin-left: -40px;
+    margin-top:20px;
+}
+
+.thumbnail {
+    padding: 0;
+}
+
+.carousel-inner>.item>img, .carousel-inner>.item>a>img {
+    width: 100%;
+}
